feat: update model && fix response message errors

--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=6ce48be6c4972461217f4a2927ea4575
 ###< doctrine/doctrine-bundle ###
 DATABASE_URL="postgresql://omar_db_user_1:testLongPassword22@127.0.0.1:5432/heros"
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
