--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -28,9 +28,7 @@ doctrine:
 when@test:
     doctrine:
         dbal:
-            # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test%env(default::TEST_TOKEN)%'
-
+            dbname: 'test_db_test'
 when@prod:
     doctrine:
         orm:
